--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,10 @@ dependencies:
   google_fonts: ^6.3.1
   loading_animation_widget: ^1.3.0
   shared_preferences: ^2.5.3
+  firebase_core: ^4.1.0
+  firebase_auth: ^6.0.2
+  cloud_firestore: ^6.0.1
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
